# ROS2_RDK

./: Purpose
line_follower/: DEPLOYMENT_TO_RDK.md  README.md  README_cn.md  数据协议解析6008-20250917.docx
line_follower/10_model_convert/mapper/: 01_check.sh  02_preprocess.sh  resnet18_config.yaml
line_follower/line_follower_control/: package.xml  setup.cfg  setup.py
line_follower/line_follower_control/config/: control_params.yaml
line_follower/line_follower_control/line_follower_control/: differential_drive_controller.py
line_follower/line_follower_control/resource/: line_follower_control
line_follower/line_follower_model/: setup.py
line_follower/line_follower_model/line_follower_model/: annotation_member_function.py  generate_onnx_member_function.py  training_member_function.py
line_follower/line_follower_perception/: CMakeLists.txt
line_follower/line_follower_perception/include/line_follower_perception/: line_follower_perception.h
line_follower/line_follower_perception/src/: line_follower_perception.cpp
